# src/swagger.json
@@ -21,7 +21,6 @@
                 "summary": "cadastro de usuario",
                 "description": "essa rota sera responsavel por cadastrar um usuario",
                 "tags": ["users"],
-                "security": [{"bearerAuth": []}],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -54,10 +53,125 @@
                             "application/json": {
                                 "schema": {
                                     "type": "object",
+                                    "example": {
+                                        "name": "teste213",
+                                        "email": "teste213@mail.com",
+                                        "phone": "71999943626",
+                                        "id": 20,
+                                        "created_at": "2023-06-04"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "summary": "rota para a listagem de todos os usuario",
+                "description": "essa rota sera responsavel por listar todos os usuarios",
+                "tags": ["users"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "example": {
+                                        "name": "teste213",
+                                        "email": "teste213@mail.com",
+                                        "phone": "71999943626",
+                                        "id": 20,
+                                        "created_at": "2023-06-04"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "patch": {
+                "summary": "rota para a atualização dos dados",
+                "description": "rota para a atualização dos dados dos usuarios",
+                "tags": ["users"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "user id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/users"
+                            },
+                            "examples": {
+                                "user": {
+                                    "value": {
+                                        "name": "Teste",
+                                        "email": "teste@mail.com",
+                                        "password": "123456",
+                                        "phone": "12321321321"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Email already exists"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
                                     "$ref": "#/components/schemas/users"
                                 }
                             }
                         }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "rota para deletar um usuario",
+                "description": "rota para deletar um usuario do banco de dados",
+                "tags": ["users"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "user id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {}
+                },
+                "responses": {
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "204": {
+                        "description": "no content"
                     }
                 }
             }
@@ -103,6 +217,166 @@
                     }
                 }
             }
+        },
+        "contacts": {
+            "post": {
+                "summary": "criação de um contato para um usuario",
+                "description": "esta rota sera responsavel para criar um contato para um usuario",
+                "tags": ["contacts"],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/contacts"
+                            },
+                            "examples": {
+                                "user": {
+                                    "value": {
+                                        "name": "teste",
+                                        "email": "teste@mail.com",
+                                        "password": "123456",
+                                        "phone": "123213214"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Email already exists"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "example": {
+                                        "name": "teste213",
+                                        "email": "teste213@mail.com",
+                                        "phone": "71999943626",
+                                        "id": 20,
+                                        "created_at": "2023-06-04"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "get": {
+                "summary": "rota para a listagem de todos os contatos",
+                "description": "essa rota sera responsavel por listar todos os contatos",
+                "tags": ["contacts"],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "example": {
+                                        "name": "teste213",
+                                        "email": "teste213@mail.com",
+                                        "phone": "71999943626",
+                                        "id": 20,
+                                        "created_at": "2023-06-04"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "contacts/{id}": {
+            "patch": {
+                "summary": "rota para a atualização dos dados",
+                "description": "rota para a atualização dos dados do contato",
+                "tags": ["contacts"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "contact id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/contacts"
+                            },
+                            "examples": {
+                                "user": {
+                                    "value": {
+                                        "name": "Teste",
+                                        "email": "teste@mail.com",
+                                        "password": "123456",
+                                        "phone": "12321321321"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Email already exists"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/contacts"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "rota para deletar um contato",
+                "description": "rota para deletar um contato do banco de dados",
+                "tags": ["contacts"],
+                "security": [{"bearerAuth": []}],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "contact id",
+                        "required": true
+                    }
+                ],
+                "requestBody": {
+                    "content": {}
+                },
+                "responses": {
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "204": {
+                        "description": "no content"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -137,6 +411,32 @@
                         "type": "string"
                     },
                     "password": {
+                        "type": "string"
+                    }
+                }
+            },
+            "contacts": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "email": {
+                        "type": "string"
+                    },
+                    "password": {
+                        "type": "string"
+                    },
+                    "phone": {
+                        "type": "string"
+                    },
+                    "userId": {
+                        "type": "number"
+                    },
+                    "id": {
+                        "type": "number"
+                    },
+                    "created_at": {
                         "type": "string"
                     }
                 }
